apps/room-server/overlays/dev/namespace.yaml
# apps/room-server/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
