apps/room-server/overlays/dev/patch-replicas.yaml
# apps/room-server/overlays/dev/patch-replicas.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: room-server
spec:
  replicas: 2
